fix PaymentService